[feat] modify config